# shangcloud-sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  LICESE  README.md  pyproject.toml
.github/workflows/: publish.yml  workflow.yml
shangcloud/: __init__.py  client.py  exceptions.py  models.py  storage.py  user.py
