[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shangcloud-sdk"
version = "1.0.0"
description = "ShangCloud OAuth 2.0 SDK for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["shangcloud", "oauth", "sdk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/YearnstudioHorizon/shangcloud-sdk-python"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:project.version"
]
version_toml = ["pyproject.toml:project.version"]

build_command = "pip install build && python -m build"

changelog_file = "CHANGELOG.md"